--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "nodemon app.js localhost 8080"
   },
   "dependencies": {
+    "body-parser": "1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "hbs": "4.1.1",
     "morgan": "~1.9.1",
-    "node-bigcommerce": "4.1.0"
+    "node-bigcommerce": "4.1.0",
+    "request": "2.88.2"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
